@@ -6,12 +6,12 @@
 			"description": "Inline lint highlighting for the Sublime Text 2 editor",
 			"author": "Kronuz, Aparajita Fishman, Jake Swartwood",
 			"homepage": "http://github.com/SublimeLinter/SublimeLinter",
-			"last_modified": "2012-11-06 00:19:27",
+			"last_modified": "2012-11-18 00:19:27",
 			"platforms": {
 				"*": [
 					{
-						"version": "1.6.10",
-						"url": "https://nodeload.github.com/SublimeLinter/SublimeLinter/zipball/v1.6.10"
+						"version": "1.6.11",
+						"url": "https://nodeload.github.com/SublimeLinter/SublimeLinter/zip/v1.6.11"
 					}
 				]
 			}
@@ -25,7 +25,7 @@
 				"*": [
 					{
 						"version": "1.7.0-beta.1",
-						"url": "https://nodeload.github.com/SublimeLinter/SublimeLinter/zipball/beta"
+						"url": "https://nodeload.github.com/SublimeLinter/SublimeLinter/zip/beta"
 					}
 				]
 			}
